--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+---
+title: "blog.ploth.xyz"
+---
+
+<div class="list">
+  <h2>Blog posts</h2>
+  <nav>
+    <ul>
+        {% for post in site.posts %}
+        <li>
+            <span class="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+  </nav>
+  <h2>Links</h2>
+  <nav>
+    <ul>
+        <li>
+            <span class="date">31 Oct 2017</span> &raquo; <a href="https://www.rohow.de/">RoHOW - Robotic Hamburg Open Workshop</a>
+        </li>
+        <li>
+            <span class="date">30 Oct 2017</span> &raquo; <a href="https://www.hulks.de/">HULKs - RoboCup SPL Team</a>
+        </li>
+    </ul>
+  </nav>
+  <h2>Noteworthy projects</h2>
+  <nav>
+    <ul>
+        <li>
+            <span class="date">31 Oct 2017</span> &raquo; <a href="https://github.com/nagua/harbour-taskwarrior-GUI">Simple GUI client for Taskwarrior</a>
+        </li>
+    </ul>
+  </nav>
+</div>
