--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: "blog.ploth.xyz"
   <h2>Noteworthy projects</h2>
   <nav>
     <ul>
+      <li><span class="date">19 Jan 2019</span> &raquo; <a href="https://gitlab.com/ploth/generation-of-training-data-for-deep-learning">Generation of Training Data for Deep Learning</a></li>
       <li><span class="date">01 Aug 2018</span> &raquo; <a href="https://prism-break.org/">PRISM ⚡ Break - Opt out of global data surveillance programs like PRISM, XKeyscore and Tempora.</a></li>
       <li><span class="date">01 Aug 2018</span> &raquo; <a href="https://matrix.org/blog/home/">[MATRIX] An open network for secure, decentralized communication.</a></li>
       <li><span class="date">31 Oct 2017</span> &raquo; <a href="https://github.com/nagua/harbour-taskwarrior-GUI">Simple GUI client for Taskwarrior</a></li>
