--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: "blog.ploth.xyz"
 <div class="list">
   <h2>Blog posts</h2>
   <nav>
-    <ul>
-        {% for post in site.posts %}
-        <li><span class="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
+    <table style="width:100%">
+      {% for post in site.posts %}
+      <tr><td><span class="date">{{ post.date | date_to_string }} &raquo;</span></td><td><a href="{{ post.url }}">{{ post.title }}</a></td></tr>
+      {% endfor %}
+    </table>
   </nav>
   <h2>Noteworthy projects</h2>
   <nav>
