--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@ title: "blog.ploth.xyz"
 <div class="list">
   <h2>Blog posts</h2>
   <nav>
-    <table style="width:100%">
+    <table>
       {% for post in site.posts %}
-      <tr><td><span class="date">{{ post.date | date_to_string }} &raquo;</span></td><td><a href="{{ post.url }}">{{ post.title }}</a></td></tr>
+      <tr>
+        <td style="width:20%">
+          <span class="date">{{ post.date | date_to_string }} &raquo;</span>
+        </td>
+        <td style="width:80%">
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </td>
+      </tr>
       {% endfor %}
     </table>
   </nav>
