--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ title: "blog.ploth.xyz"
     <table>
       {% for post in site.posts %}
       <tr>
-        <td style="width:20%">
+        <td style="width:20%" valign="top">
           <span class="date">{{ post.date | date_to_string }} &raquo;</span>
         </td>
-        <td style="width:80%">
+        <td style="width:80%" valign="top">
           <a href="{{ post.url }}">{{ post.title }}</a>
         </td>
       </tr>
