Table for link list

--- a/index.html
+++ b/index.html
@@ -20,13 +20,55 @@ title: "blog.ploth.xyz"
   </nav>
   <h2>Noteworthy projects</h2>
   <nav>
-    <ul>
-      <li><span class="date">19 Jan 2019</span> &raquo; <a href="https://gitlab.com/ploth/generation-of-training-data-for-deep-learning">Generation of Training Data for Deep Learning</a></li>
-      <li><span class="date">01 Aug 2018</span> &raquo; <a href="https://prism-break.org/">PRISM ⚡ Break - Opt out of global data surveillance programs like PRISM, XKeyscore and Tempora.</a></li>
-      <li><span class="date">01 Aug 2018</span> &raquo; <a href="https://matrix.org/blog/home/">[MATRIX] An open network for secure, decentralized communication.</a></li>
-      <li><span class="date">31 Oct 2017</span> &raquo; <a href="https://github.com/nagua/harbour-taskwarrior-GUI">Simple GUI client for Taskwarrior</a></li>
-      <li><span class="date">31 Oct 2017</span> &raquo; <a href="https://www.rohow.de/">RoHOW - Robotic Hamburg Open Workshop</a></li>
-      <li><span class="date">30 Oct 2017</span> &raquo; <a href="https://www.hulks.de/">HULKs - RoboCup SPL Team</a></li>
-    </ul>
+    <table>
+      <tr>
+        <td style="width:20%" valign="top">
+          <span class="date">19 Jan 2019 &raquo;</span>
+        </td>
+        <td style="width:80%" valign="top">
+          <a href="https://gitlab.com/ploth/generation-of-training-data-for-deep-learning">Generation of Training Data for Deep Learning</a>>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20%" valign="top">
+          <span class="date">01 Aug 2018 &raquo;</span>
+        </td>
+        <td style="width:80%" valign="top">
+          <a href="https://prism-break.org/">PRISM ⚡ Break - Opt out of global data surveillance programs like PRISM, XKeyscore and Tempora.</a>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20%" valign="top">
+          <span class="date">01 Aug 2018 &raquo;</span>
+        </td>
+        <td style="width:80%" valign="top">
+          <a href="https://matrix.org/blog/home/">[MATRIX] An open network for secure, decentralized communication.</a>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20%" valign="top">
+          <span class="date">31 Oct 2017 &raquo;</span>
+        </td>
+        <td style="width:80%" valign="top">
+          <a href="https://github.com/nagua/harbour-taskwarrior-GUI">Simple GUI client for Taskwarrior</a>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20%" valign="top">
+          <span class="date">31 Oct 2017 &raquo;</span>
+        </td>
+        <td style="width:80%" valign="top">
+          <a href="https://www.rohow.de/">RoHOW - Robotic Hamburg Open Workshop</a>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:20%" valign="top">
+          <span class="date">30 Oct 2017 &raquo;</span>
+        </td>
+        <td style="width:80%" valign="top">
+          <a href="https://www.hulks.de/">HULKs - RoboCup SPL Team</a>
+        </td>
+      </tr>
+    </table>
   </nav>
 </div>
