--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: "blog.ploth.xyz"
           <span class="date">19 Jan 2019 &raquo;</span>
         </td>
         <td style="width:80%" valign="top">
-          <a href="https://gitlab.com/ploth/generation-of-training-data-for-deep-learning">Generation of Training Data for Deep Learning</a>>
+          <a href="https://gitlab.com/ploth/generation-of-training-data-for-deep-learning">Generation of Training Data for Deep Learning</a>
         </td>
       </tr>
       <tr>
