Change noteworth projects to links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: "blog.ploth.xyz"
       {% endfor %}
     </table>
   </nav>
-  <h2>Noteworthy projects</h2>
+  <h2>Links</h2>
   <nav>
     <table>
       <tr>
