Change blog posts to posts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "blog.ploth.xyz"
 ---
 
 <div class="list">
-  <h2>Blog posts</h2>
+  <h2>Posts</h2>
   <nav>
     <table>
       {% for post in site.posts %}
