Add dotfiles and meylenplan link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@ title: "blog.ploth.xyz"
     <table>
       <tr>
         <td style="white-space:nowrap" valign="top">
+          <span class="date">20 Feb 2019 &raquo;</span>
+        </td>
+        <td valign="top">
+          <a href="https://gitlab.com/ploth/meylenplan">meylenplan - Fetches and displays the SchlemmerMeyle meal plan for today</a>
+        </td>
+      </tr>
+      <tr>
+        <td style="white-space:nowrap" valign="top">
+          <span class="date">20 Feb 2019 &raquo;</span>
+        </td>
+        <td valign="top">
+          <a href="https://gitlab.com/ploth/dotfiles">My dotfile repository</a>
+        </td>
+      </tr>
+      <tr>
+        <td style="white-space:nowrap" valign="top">
           <span class="date">19 Jan 2019 &raquo;</span>
         </td>
         <td valign="top">
